--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
-    "otp-generator": "^4.0.1",
-    "yup": "^1.4.0"
+    "otp-generator": "^4.0.1"
   }
 }
