--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "express": "^4.21.1",
     "google-auth-library": "^9.15.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.8.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "otp-generator": "^4.0.1",
